# vkey-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  pyproject.toml
.github/workflows/: rust.yml
scripts/: example_gen_numeric.rs  rust_gen_convert.py
scripts/cache/numeric/: hut_04.txt  keysym.txt  macos.txt  win_makecode1.txt  windows.txt
src/: lib.rs
src/convert/: _build.rs  convert.csv  generated.EnigoDep_to_CG.rs  generated.EnigoDep_to_Keysym.rs  generated.EnigoDep_to_WinVk.rs  generated.EnigoDep_to_Winput.rs  generated.EnigoMirror_to_CG.rs  generated.EnigoMirror_to_Keysym.rs  generated.EnigoMirror_to_WinVk.rs  generated.EnigoMirror_to_Winput.rs  generated.Enigo_to_WinVk.rs  generated.Enigo_to_Winput.rs  generated.HUT_to_Winput.rs  generated.WinVk_to_WinScan.rs  generated.Winput_to_CG.rs  generated.Winput_to_Enigo.rs  generated.Winput_to_EnigoDep.rs  generated.Winput_to_EnigoMirror.rs  generated.Winput_to_HUT.rs  generated.Winput_to_Keysym.rs  generated.Winput_to_WinScan.rs  generated._index.rs  mod.rs
src/keycodes/: macos.rs  mod.rs  windows.rs  winput.rs
src/keycodes/convert/: convert.csv  generated.Winput_to_CG.rs  generated.Winput_to_Enigo.rs  generated.Winput_to_HUT.rs  generated.enigo_to_vk.rs  generated.enigo_to_winput.rs  mod.rs
src/keycodes/enigo/: key.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/keycodes/macos_ext/: codes_ext.rs  mod.rs
src/keycodes/winit/: key.rs
src/mirror/: enigo.rs  macos.rs  make1.rs  mod.rs  vk.rs  windows.rs  winput.rs
src/mirror/winit/: key.rs
src/numeric/: generated.CG.rs  generated.HUT.rs  generated.Keysym.rs  generated.WinScan.rs  generated.WinVk.rs  generated.Winput.rs  generated._index.rs  mod.rs
